Fix fixed ribbon on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -163,6 +163,7 @@ p {
 
         #ribbon-vert {
             position: fixed;
+            -webkit-backface-visibility: hidden;
             content:" ";
             z-index: -1000;
             top: 0;
